<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Yamba</string>
    <string name="menu_settings">Settings</string>
    <string name="status_text">Enter message</string>
    <string name="status_button_text">Send</string>
    <string name="status_update_hint">Please enter your status here</string>
    <string name="start_service_string">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="refresh_status">Refresh</string>
    <string name="prefs_username">Username</string>
    <string name="prefs_username_summary">Your Username</string>
    <string name="prefs_password">Password</string>
    <string name="prefs_password_summary">Enter your password</string>
    <string name="prefs_server">Server</string>
    <string name="prefs_server_summary">Enter Server API address</string>
    <string name="item_preferences">Preferences</string>
    <string name="pref_delay">Refresh delay</string>
    <string name="pref_delay_summary">Type delay in ms</string>

    <string-array name="delayNames">
        <item>Every 15 minutes</item>
        <item>Every 30 minutes</item>
        <item>Every hour</item>
        <item>Every half day</item>
        <item>Every day</item>
    </string-array>
    <string-array name="delayValues">
        <item>900000 </item>
        <item>1800000 </item>
        <item>3600000 </item>
        <item>43200000 </item>
        <item>86400000 </item>
    </string-array>

    <string name="timeline_title">Timeline</string>
    <string name="timeline_content">Nothing to display</string>

</resources>