<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <EditTextPreference
        android:key="username"
        android:summary="@string/prefs_username_summary"
        android:title="@string/prefs_username" />
    <EditTextPreference
        android:key="password"
        android:password="true"
        android:summary="@string/prefs_password_summary"
        android:title="@string/prefs_password" />
    <EditTextPreference
        android:key="server"
        android:summary="@string/prefs_server_summary"
        android:title="@string/prefs_server" />

    <ListPreference
        android:entries="@array/delayNames"
        android:entryValues="@array/delayValues"
        android:key="delay"
        android:summary="@string/pref_delay_summary"
        android:title="@string/pref_delay" />

</PreferenceScreen>